fix scrollbar in scss chatroom

--- a/src/app/chatroom/chatroom.component.scss
+++ b/src/app/chatroom/chatroom.component.scss
@@ -3,7 +3,7 @@
 }
 
 .chatroom {
-    height: 100vh;
+/*     height: 100vh; */
     display: flex;
     gap: 40px;
 }
